--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<button>Hello</button>
-<p>paragraph of text</p>
-<a href="https://www.youtube.com">Link to YouTube</a>
+<button>
+  Hello
+</button>
+
+<p>
+  paragraph of text
+</p>
+
+<a 
+href="youtube.com" target="_blank">Link to YouTube
+</a
