--- a/text.html
+++ b/text.html
@@ -1,11 +1,48 @@
 <style>
 .video-title{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
   font-weight: bold;
-  font-style: italic;
-  font-align
+  font-size: 18px;
+  width: 300px;
+  line-height: 20px;
 
+}
+.video-stats{
+  font-family: Arial;
+  
+  font-size: 14px;
+  color:  rgb(96, 96, 96);
+  margin-bottom: 20px;
+}
+.video-author{
+  font-family: Arial;
+
+  font-size: 14px;
+  color:  rgb(96, 96, 96);
+  width: 300px;
+  margin-top: 5;
+}
+
+.video-description{
+  font-family: Arial;
+  line-height: 22px;
+  font-size: 14px;
+  color:  rgb(96, 96, 96);
+  width: 280px;
+  margin-top: 5px;
+  margin-bottom: 100px;
+}
+
+.apple-text{
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  text-align: center;
+  background-color:  rgb(277, 65, 64);
+  box-sizing: border-box;
+  display: block;
+  font-size: 14px;
+  padding: 24px;
+  text-decoration: underline;
 }
 </style>
 
@@ -15,4 +52,22 @@
    Talking Tech and AI with Google CEO Sundar Pichai!
 </p>
 
-;
+<p class="video-stats"> 
+  3.4M views &#183; 6 months ago
+</p>
+
+<p class="video-author"> 
+  Marques Brownlee &#10003;
+</p>
+
+<p class="video-description">
+  Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
+</p>
+
+<p class="apple-text">
+  Shop early for the best selection of holiday favourite. Show now &#62;
+</p>
+
+<p>
+  Shop early for the best selection of holiday favourite. Show now &#62;
+</p>
