--- a/text.html
+++ b/text.html
@@ -42,7 +42,14 @@
   display: block;
   font-size: 14px;
   padding: 24px;
-  text-decoration: underline;
+  
+}
+.span-example{
+  color: rgb(9, 0, 0);
+}
+
+.span-example:hover{
+  text-decoration: underline;  
 }
 </style>
 
@@ -65,9 +72,8 @@
 </p>
 
 <p class="apple-text">
-  Shop early for the best selection of holiday favourite. Show now &#62;
+  Shop early for the <strong>best selection </strong> of holiday <span class="span-example">Show now &#62;</span> 
 </p>
-
 <p>
-  Shop early for the best selection of holiday favourite. Show now &#62;
+  Shop early for the best selection of holiday <span class="span-example">Show now &#62;</span> 
 </p>
