--- a/buttons.html
+++ b/buttons.html
@@ -1,3 +1,15 @@
+<html lang="en">
+<head> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ajwa's buttons</title>
+</head>
+
+
+
+<body>
+
 <style>
   .subscribe-button{
     background-color: rgba(154, 15, 15, 0.94);
@@ -81,3 +93,5 @@
   Tweet
 </button>
 
+</body>
+</html>
