--- a/text.html
+++ b/text.html
@@ -1,61 +1,14 @@
-<style>
-.video-title{
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  width: 300px;
-  line-height: 20px;
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="">
 
-}
-.video-stats{
-  font-family: Arial;
-  
-  font-size: 14px;
-  color:  rgb(96, 96, 96);
-  margin-bottom: 20px;
-}
-.video-author{
-  font-family: Arial;
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>text</title>
+</head>
 
-  font-size: 14px;
-  color:  rgb(96, 96, 96);
-  width: 300px;
-  margin-top: 5;
-}
-
-.video-description{
-  font-family: Arial;
-  line-height: 22px;
-  font-size: 14px;
-  color:  rgb(96, 96, 96);
-  width: 280px;
-  margin-top: 5px;
-  margin-bottom: 100px;
-}
-
-.apple-text{
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
-  text-align: center;
-  background-color:  rgb(277, 65, 64);
-  box-sizing: border-box;
-  display: block;
-  font-size: 14px;
-  padding: 24px;
-  
-}
-.span-example{
-  color: rgb(9, 0, 0);
-  margin-left: 14px;
-}
-
-.span-example:hover{
-  text-decoration: underline;  
-}
-</style>
-
-
-
+  <style></style>
 <p class="video-title">
    Talking Tech and AI with Google CEO Sundar Pichai!
 </p>
@@ -77,3 +30,7 @@
 </p>
 <p>
   Shop early for the best selection of holiday <span class="span-example">Show now &#62;</span> 
+</style>
+</body>
+
+</html>
