--- a/text.html
+++ b/text.html
@@ -1,14 +1,15 @@
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="">
-
+  <link rel="stylesheet" href="styles/text.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>text</title>
+  <title>Document</title>
 </head>
 
-  <style></style>
+
+
+<body></body>
 <p class="video-title">
    Talking Tech and AI with Google CEO Sundar Pichai!
 </p>
@@ -30,7 +31,5 @@
 </p>
 <p>
   Shop early for the best selection of holiday <span class="span-example">Show now &#62;</span> 
-</style>
 </body>
-
 </html>
