--- a/into-to-html/html/text.html
+++ b/into-to-html/html/text.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="stylesheet" href="styles/text.css">
@@ -9,7 +10,7 @@
 
 
 
-<body></body>
+<body>
 <p class="video-title">
    Talking Tech and AI with Google CEO Sundar Pichai!
 </p>
