--- a/youtube.html
+++ b/youtube.html
@@ -1,23 +1,39 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
+    <title>
+      Youtube.com Clone
+    </title>
+    <style>
+      .thumbnail{
+        width: 300px;
+        object-fit: cover;
+      }
+      .search-bar{
+        font-size: 20px;
+        margin-left: 12px;
+      }
 
-
-  <title>
-    Youtube
-  </title>
-</head>
-
+    </style>
+  </head>
 
 <body>
-  
-<img> 
 
 
+<img class="thumbnail"  src="thumbnail-1.webp">
+<input class="search-bar" type="text" placeholder="search">
+<p>
+  Talking Tech and AI with Google CEO Sundar Pichai!
+</p>
 
+<p>
+  Marques Brownlee &#10003;
+</p>
+
+<p>
+  3.4M views &#183; 6 months ago
+
+</p>
 
 
 
@@ -28,4 +44,37 @@
 
 
 </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
