--- a/youtube.html
+++ b/youtube.html
@@ -8,29 +8,40 @@
       .thumbnail{
         width: 300px;
         object-fit: cover;
+        display: block;
       }
       .search-bar{
         font-size: 20px;
         margin-left: 12px;
+        display: block;
+        
       }
+
 
     </style>
   </head>
 
-<body>
 
+
+
+
+
+
+
+<body>
+  <input class="search-bar" type="text" placeholder="search">
 
 <img class="thumbnail"  src="thumbnail-1.webp">
-<input class="search-bar" type="text" placeholder="search">
+
 <p>
   Talking Tech and AI with Google CEO Sundar Pichai!
 </p>
 
-<p>
+<p class="video-authour">
   Marques Brownlee &#10003;
 </p>
 
-<p>
+<p class="video-stats">
   3.4M views &#183; 6 months ago
 
 </p>
