--- a/youtube.html
+++ b/youtube.html
@@ -27,7 +27,9 @@
       .video-preview-2{
         width: 300px;
         display: inline-block;
+        margin-top: 12px;
         margin-left: 12px ;
+        vertical-align: top
 
       }
       .video-preview-3{
@@ -40,7 +42,8 @@
       .video-preview-4{
         width: 300px;
         display: inline-block;
-        margin: 12px;
+        margin-right: 12px;
+        margin-top: 12px;
       }
     </style>
   </head>
