--- a/youtube.html
+++ b/youtube.html
@@ -51,9 +51,11 @@
 <body>
   <input class="search-bar" type="text" placeholder="search">
 <div class="video-preview">
-  <img class="thumbnail"  src="thumbnail-1.webp">
-  
-  <p>
+  <div>  <img class="thumbnail"  src="thumbnail-1.webp">
+  </div>
+  <div>
+    <img src="channel-pictures/download.jpg" alt="">
+    <p class="video-title">
     Talking Tech and AI with Google CEO Sundar Pichai!
   </p>
   
@@ -64,6 +66,8 @@
   <p class="video-stats">
     3.4M views &#183; 6 months ago
   </p>
+</div>
+
    </div>
 
 
