--- a/youtube.html
+++ b/youtube.html
@@ -51,21 +51,28 @@
 <body>
   <input class="search-bar" type="text" placeholder="search">
 <div class="video-preview">
-  <div>  <img class="thumbnail"  src="thumbnail-1.webp">
+  <div> 
+     <img class="thumbnail"  src="thumbnail-1.webp">
   </div>
-  <div>
-    <img src="channel-pictures/download.jpg" alt="">
+<div>
+ <div class="channel-pictures"> 
+    <img src="intro-to-html/html/channel-pictures/download.jpg">
+  </div>
+
+   <div class="video-info">
     <p class="video-title">
-    Talking Tech and AI with Google CEO Sundar Pichai!
-  </p>
-  
-  <p class="video-author">
-    Marques Brownlee &#10003;
-  </p>
-  
-  <p class="video-stats">
-    3.4M views &#183; 6 months ago
-  </p>
+      Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
+    
+    <p class="video-author">
+      Marques Brownlee &#10003;
+    </p>
+    
+    <p class="video-stats">
+      3.4M views &#183; 6 months ago
+    </p>
+  </div>
+
 </div>
 
    </div>
