--- a/youtube.html
+++ b/youtube.html
@@ -45,6 +45,20 @@
         margin-right: 12px;
         margin-top: 12px;
       }
+
+      .channel-picture{
+        display: inline-block;
+        width: 50px;
+        vertical-align: top;
+      }
+      .video-info{
+        display: inline-block;
+        width: 200px;
+      
+      }
+      .profile-picture{
+        width: 100%;
+      }
     </style>
   </head>
 
@@ -55,8 +69,8 @@
      <img class="thumbnail"  src="thumbnail-1.webp">
   </div>
 <div>
- <div class="channel-pictures"> 
-    <img src="intro-to-html/html/channel-pictures/download.jpg">
+ <div class="channel-picture"> 
+    <img class="profile-picture"   src="intro-to-html/html/channel-pictures/download.jpg">
   </div>
 
    <div class="video-info">
